[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tank_Projectile.gd" type="Script" id=1]
[ext_resource path="res://Assets/kenney_topdowntanksredux/PNG/Default size/Tank Projectiles/bulletBlue2_outline.png" type="Texture" id=2]
[ext_resource path="res://Tank_Area2D.gd" type="Script" id=3]

[node name="Tank_Projectile" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_v = true

[node name="Tween" type="Tween" parent="."]

[node name="Tank_Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12
script = ExtResource( 3 )

[node name="Missile_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Tank_Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Missile_Timer" to="." method="_on_Missile_Timer_timeout"]
